Moved initiateGame and game loop to main method instead of the gamemanagers constructor